tests/semantica/valid/return/test3.ctds
program 
	{
        bool foo() {
            return true == true;
        }

        bool main(){
            return true && foo() || !false;
        }
    }