tests/semantica/invalid/metodos/test5.ctds
program
	{
		
		integer foo(integer x){
			return x;
		}

		void main(){
			foo(true);
		}
	}